<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.basicandroid.MainActivity">

    <TextView
        android:text="@string/interesting_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <Button
        android:text="@string/third_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_below="@+id/btnDoMagic"
        android:layout_toRightOf="@+id/btnDoMagic"
        android:layout_toEndOf="@+id/btnDoMagic" />

    <Button
        android:text="@string/second_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/launch_button"
        android:layout_below="@+id/btnDoMagic"
        android:layout_toLeftOf="@+id/btnDoMagic"
        android:layout_toStartOf="@+id/btnDoMagic" />

    <Button
        android:text="@string/do_the_magic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDoMagic"
        android:layout_marginTop="40dp"
        android:layout_alignTop="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/options_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/launch_button"
        android:layout_alignStart="@+id/launch_button"
        android:id="@+id/option_button" />

</RelativeLayout>
